force-app/main/default/objects/tc9_edc__Setup_Pay_Rate_Loading__mdt/tc9_edc__Setup_Pay_Rate_Loading__mdt.object-meta.xml
<CustomObject>
    <label>Setup Pay Rate Loading</label>
    <pluralLabel>Setup Pay Rate Loadings</pluralLabel>
</CustomObject>