force-app/main/default/objects/tc9_edc__Setup_Pay_Rate_Loading__mdt/fields/tc9_edc__Assignment_Handling__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Assignment_Handling__c</fullName>
    <label>Assignment Handling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>