force-app/main/default/objects/tc9_edc__Setup_Pay_Rate_Loading__mdt/fields/tc9_edc__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>