force-app/main/default/objects/tc9_edc__Setup_Pay_Rate_Loading__mdt/fields/tc9_edc__Loading_Based_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Loading_Based_On__c</fullName>
    <label>Loading Based On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>