force-app/main/default/objects/tc9_edc__Setup_Pay_Rate_Loading__mdt/fields/tc9_edc__Loading_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Loading_Rate__c</fullName>
    <label>Loading Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>